BugFix
1. Logic for word count
2. Modified CSS for size buttons. No overlapping after modification.

--- a/static/styles/input.css
+++ b/static/styles/input.css
@@ -189,7 +189,7 @@ nav .fa {
     top: 50%;
     left: 50%;
 
-    transform: translate(-50%, -45%);
+    transform: translate(-50%, -40%);
     animation: fadeIn 1s cubic-bezier(0.25, 0.1, 0.25, 1);
     z-index: 0;
 }
